fixed a bug involving overflow

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -272,7 +272,7 @@ pre {
   background-color: #f0f0f0;
 
   > code {
-    display: inline-block;
+    display: block;
     padding: 20px!important;
     background-color: transparent;
     border: 0;
