--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -218,29 +218,10 @@ html[data-theme="dark"]  {
     border-radius: 3px;
     color: $dark-text-color;
     background-color: #454545;
-    margin: 0 5px;
   }
 
   pre {
-    overflow-x: auto;
-    position: relative;
     background-color: #282a36;
-
-    > code {
-      display: inline-block;
-      padding: 20px!important;
-      background-color: transparent;
-      border: 0;
-    }
-
-    table, pre {
-      margin-bottom: 0;
-
-      .gutter, .code {
-        padding: 6px;
-        border: none;
-      }
-    }
   }
 
 
